# ga_template

./: README.md  mypy.ini  pyproject.toml
.github/workflow/: organization-ci.properties.json
.github/workflows/: organization-ci.yml
workflow/: organization-ci.yml
